2006-10-13  J. Tang  <jtang@tresys.com>

	* Official release of SETools 3.0.