@@ -3,16 +3,16 @@
 sediffx \- graphical SELinux policy difference tool
 .SH SYNOPSIS
 .B sediffx
-[OPTIONS]
+[\-h|\-v]
 .PP
-.B sediffx 
-[OPTIONS] POLICY1 POLICY2
+.B sediffx
+[\-d] [ORIGINAL_POLICY MODIFIED_POLICY]
 .SH DESCRIPTION
 This manual page describes the
 .B sediffx
 command.
 .PP
-.B sediffx 
+.B sediffx
 allows the user to graphically inspect the semantic differences between two SELinux policy files.
 .SH OPTIONS
 .IP "-h, --help"
@@ -20,9 +20,9 @@ display this help and exit
 .IP "-v, --version"
 output version information and exit
 .IP "-d, --diff-now"
-diff the policies immediately
+load the policies and diff them immediately
 .SH AUTHOR
-This manual page was written by Kevin Carr <kcarr@tresys.com>.  
+This manual page was written by Kevin Carr <kcarr@tresys.com>.
 .SH COPYRIGHT
 Copyright(C) 2006 Tresys Technology, LLC
 .SH SEE ALSO
